@@ -1039,7 +1039,7 @@ class HTTPRequest(BaseRequest):
         except: rsp.exception()
         if object is None:
             req.close()
-            raise rsp.errmsg, sys.exc_info()[1]
+            raise sys.exc_info()[0], rsp.errmsg
 
         # The traversal machinery may return a "default object"
         # like an index_html document. This is not appropriate
