@@ -27,6 +27,8 @@ Zope Changes
 
       - Collector #2073: fixed misbehaviour of OFS.Owned.changeOwnership
 
+      - Collector #1944: HTTPRequest.resolve_url has error in raising errors
+
   Zope 2.9.3 (2006/05/13)
 
    Bugs fixed
